[tool.poetry]
name = "engine"
version = "0.0.0"
description = "A collaborative file server for engineers"
authors = ["Ethan Paul <24588726+enpaul@users.noreply.github.com>"]
repository = "https://github.com/enpaul/engine/"
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {version = "^0.101.1", extras = ["standard"]}
minio = "^7.1.15"
python-multipart = "^0.0.6"
peewee = "^3.16.3"


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
black = "^23.7.0"
mypy = "^1.5.0"
pylint = "^2.17.5"
pytest = "^7.4.0"
toml = "^0.10.2"
mdformat = "^0.7.16"
mdformat-gfm = "^0.3.5"
pre-commit = "^3.3.3"
pre-commit-hooks = "^4.4.0"
blacken-docs = "^1.15.0"
reorder-python-imports = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
